C2: assert(false) failed: Bad graph detected in build_loop_late

XMLWordPrintable

    • b24
    • 17
    • b18

        The attached Java Fuzzer test starts to fail after JDK-8252372. This bug is different from JDK-8271954 but fails with the same assertion:

        To reproduce:

        $ java -Xmx1G Test.java (fails intermittently)
        $ java -XX:CompileOnly=Reduced -XX:-TieredCompilation -Xbatch Reduced.java (always fails)

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/ff806ead-2cac-495d-9cbc-62116f99bf14-S13890/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/e1985841-cb1f-4767-b2e4-927825614993/runs/9fce6d83-2b2c-4178-b4c4-97cbe003ff2d/workspace/open/src/hotspot/share/opto/loopnode.cpp:5343), pid=24365, tid=24378
        # assert(false) failed: Bad graph detected in build_loop_late
        #
        # JRE version: Java(TM) SE Runtime Environment (17.0+35) (fastdebug build 17+35-LTS-2724)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17+35-LTS-2724, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1322da7] PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0x307
        ............
        Command Line: -Xmx1G Test
        ............
        Current thread (0x00007fd7a8481e10): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=24378, stack(0x00007fd78c2fe000,0x00007fd78c3ff000)]


        Current CompileTask:
        C2: 659 284 % ! 4 Test::vMeth @ 86 (273 bytes)

        Stack: [0x00007fd78c2fe000,0x00007fd78c3ff000], sp=0x00007fd78c3f9310, free space=1004k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1322da7] PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0x307
        V [libjvm.so+0x132324a] PhaseIdealLoop::build_loop_late(VectorSet&, Node_List&, Node_Stack&)+0xba
        V [libjvm.so+0x1323bb7] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x507
        V [libjvm.so+0xa377da] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x2da
        V [libjvm.so+0xa340f5] Compile::Optimize()+0x14f5
        V [libjvm.so+0xa35c78] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1618
        V [libjvm.so+0x84b116] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x646
        V [libjvm.so+0xa45cc1] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xb71
        V [libjvm.so+0xa46968] CompileBroker::compiler_thread_loop()+0x5a8
        V [libjvm.so+0x18dca01] JavaThread::thread_main_inner()+0x271
        V [libjvm.so+0x18e3ff0] Thread::call_run()+0x100
        V [libjvm.so+0x15a9cf4] thread_native_entry(Thread*)+0x104

          1. Test.java
            7 kB
            Christian Hagedorn
          2. hs_err_pid24365.log
            176 kB
            Christian Hagedorn
          3. Reduced.java
            0.4 kB
            Christian Hagedorn
          4. FuzzerUtils.java
            13 kB
            Christian Hagedorn

              Assignee:
              Roland Westrelin
              Reporter:
              Christian Hagedorn
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: