8272562: C2: assert(false) failed: Bad graph detected in build_loop_late

Backport-of: 980c50dc607e60e12879bd6fb7ff4034469e88d8